# Scribble

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/AIS/: Stippler.cpp  Stippler.h
src/Canvas/: Canvas.cpp  Canvas.h
src/Image/: Image.cpp  Image.h
src/SVGWriter/: SVGWriter.cpp  SVGWriter.h
